Bug 138078 - cannot cycle through different states in User-defined cell border in table properties
Summary: cannot cycle through different states in User-defined cell border in table pr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-11-09 00:28 UTC by sdc.blanco
Modified: 2020-11-12 10:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2020-11-09 00:28:06 UTC
1. Insert (or use) table.
2. Select one or more cells.
3. Table > Properties - Borders tab
4. User-defined control in Line Arrangement section
5. Click repeatedly on an edge 

Expected:  Cycle through black, grey, white lines.
Actual: Cannot cycle back to white.

Version: 7.1.0.0.alpha1+ (x64)
Build ID: a4d4ed86991e2901ac86189e95966d4e99be4944
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: da-DK (en_DK); UI: en-US
Calc: threaded

Additional information.

Works as expected in 6.3.6.2
Comment 1 Heiko Tietze 2020-11-11 14:27:30 UTC
Confirming; same issue for cell borders in Calc

Version: 7.1.0.0.alpha1+
Build ID: 941f2c866a98ca7caf71a11732853da012cd25e4
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2020-11-11 14:42:10 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d7c8799c14e16060a834dcaf50aa962a27d31314

author	Caolán McNamara <caolanm@redhat.com>	2020-10-20 10:55:33 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-10-22 21:40:44 +0200
commit d7c8799c14e16060a834dcaf50aa962a27d31314 (patch)
tree 68e70a4a1a85e73d63891ce0576a9b331ca2f1ab
parent cfadad134c6ab00a406a527e838d2e4940d337eb (diff)
always call GetFocus if GrabFocus succeeded

Bisected with: bibisect-linux64-7.1

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2020-11-11 20:22:29 UTC
looks like it depends on GetFocus getting called on calling GrabFocus only if it didn't already have the focus
Comment 4 Commit Notification 2020-11-12 08:48:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0d4ffe9a63422f30752bf886ab23ab1b8d2b10f9

tdf#138078 only call GetFocus if we gained focus from an unfocused state

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.