tdf#138078 only call GetFocus if we gained focus from an unfocused state

Change-Id: I7733cdb2bbed8e39dbbafd63b360513ab9ad5e6b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105612
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>